--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+############################
+# Specific to this project #
+############################
+# Directory for sample files
+example_files/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
